Fixed blurred font edges on Chrome

--- a/static/base.css
+++ b/static/base.css
@@ -97,7 +97,7 @@ header {
   width: 140px;
   color: #50647d;
   font-family: Orbitron, Arial;
-  font-size: 16px;
+  font-size: 17px;
   padding: 0px 20px;
   margin: 0;
   z-index: 1;
